# pico-imulib

./: CMakeLists.txt  sh2
include/: bno055_imu.h  bno085_imu.h  bno_common.h  pico-imulib.h
src/: bno055.h  bno085.c  bno085.h  imulib.c  imulib.cpp
